--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
       "email": "c.harrison1988@gmail.com"
     }
   ],
+  "license": "MIT",
   "require": {
     "php": ">=7.3",
     "funeralzone/valueobjects": "^0.4.5",
