--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,10 @@
   "license": "MIT",
   "require": {
     "php": ">=7.3",
-    "funeralzone/valueobjects": "^0.4.5",
-    "beberlei/assert": "^3.2",
     "twig/twig": "^3.0",
     "symfony/yaml": "^5.0",
     "php-di/php-di": "^6.0",
-    "composer/composer": "^1.9"
+    "ramsey/uuid": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
