--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "twig/twig": "^3.0",
     "symfony/yaml": "^5.0",
     "php-di/php-di": "^6.0",
-    "ramsey/uuid": "^4.0"
+    "ramsey/uuid": "^4.0",
+    "beberlei/assert": "^3.2",
+    "hassankhan/config": "^2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
@@ -28,7 +30,7 @@
     "files": ["autoload.php"]
   },
   "bin": [
-    "vostubs"
+    "bin/vostubs"
   ],
   "minimum-stability": "dev",
   "prefer-stable": true,
