--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "php-di/php-di": "^6.0",
     "ramsey/uuid": "^4.0",
     "beberlei/assert": "^3.2",
-    "hassankhan/config": "^2.1"
+    "hassankhan/config": "^2.1",
+    "yosymfony/parser-utils": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
