--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "files": ["autoload.php"]
   },
   "bin": [
-    "bin/vostubs"
+    "bin/generate"
   ],
   "minimum-stability": "dev",
   "prefer-stable": true,
