Changed 'generate' command to 'vogen' to avoid clashes with other packages

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "files": ["autoload.php"]
   },
   "bin": [
-    "bin/generate"
+    "bin/vogen"
   ],
   "minimum-stability": "dev",
   "prefer-stable": true,
