--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php-di/php-di": "^6.0",
     "ramsey/uuid": "^4.0",
     "beberlei/assert": "^3.2",
-    "hassankhan/config": "^2.1",
+    "hassankhan/config": "^3.1",
     "yosymfony/parser-utils": "^2.0"
   },
   "require-dev": {
@@ -37,6 +37,9 @@
   "prefer-stable": true,
   "config": {
     "preferred-install": "dist",
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
